Adicionando Biblios de funcoes no CMake

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,3 +5,6 @@ target_link_libraries(main pico_stdlib)
 
 # create map/bin/hex/uf2 file etc.
 pico_add_extra_outputs(main)
+
+include_directories(acionamentos.h)
+include_directories(game_features.h)
