--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,10 +1,7 @@
-add_executable(main main.c)
+add_executable(main main.c acionamentos.h game_features.h) 
 
 # pull in common dependencies
 target_link_libraries(main pico_stdlib)
 
 # create map/bin/hex/uf2 file etc.
 pico_add_extra_outputs(main)
-
-include_directories(acionamentos.h)
-include_directories(game_features.h)
