Ajuste no aumento de dificuldade, led+Buzzer ao apertar a cor, delay antes de começar a mostrar as cores da rodada

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "cmake.buildBeforeRun": true,
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "files.associations": {
-        "game_features.h": "c"
+        "game_features.h": "c",
+        "gpio.h": "c"
     }
 }
