--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(main acionamentos.c game_features.c main.c) 
+add_executable(main acionamentos.c game_features.c musicas.c main.c) 
 
 # pull in common dependencies
 target_link_libraries(main pico_stdlib)
