--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,20 +2,66 @@
     // These settings tweaks to the cmake plugin will ensure
     // that you debug using cortex-debug instead of trying to launch
     // a Pico binary on the host
-    "cmake.statusbar.advanced": {
-        "debug": {
-            "visibility": "hidden"
-        },
-        "launch": {
-            "visibility": "hidden"
-        },
-        "build": {
-            "visibility": "hidden"
-        },
-        "buildTarget": {
-            "visibility": "hidden"
-        }
-    },
+    
     "cmake.buildBeforeRun": true,
-    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
+    "cmake.configureOnOpen": true,
+    "cmake.ctest.allowParallelJobs": true,
+    "cmake.parallelJobs": 4,
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
+
+
+    // actions task buttons
+    "actionButtons": {
+		 "defaultColor": "#ff0034", // Can also use string color names.
+		 "loadNpmCommands":false, // Disables automatic generation of actions for npm commands.
+		 "reloadButton":"Reload", // Custom reload button text or icon (default ↻). null value enables automatic reload on configuration change
+		 "commands": [
+            {
+                "name": "$(target) Select Build Target",
+                "color": "pink",
+                "useVsCodeApi": true,
+                "command": "cmake.setDefaultTarget" // Comando para abrir a seleção de build target
+            },
+			 {
+				 "name": "$(tools) Build",
+				 "color": "red",
+				 "useVsCodeApi": true,
+                 "command": "workbench.action.tasks.runTask",
+				 "args": ["Build"]
+				 
+			 },
+			 {
+				"name": "$(rocket) Launch",
+				"color": "orange",
+				"useVsCodeApi": true,
+				"command": "workbench.action.tasks.runTask",
+				"args": ["Flash"]
+		     },
+             {
+				"name": "$(debug-console) Debug",
+				"color": "green",
+				"useVsCodeApi": true,
+				"command": "workbench.action.debug.start"
+		     }
+		 ]
+	 },
+
+     // CMake Tools Status Bar Configuration
+     "cmake.statusbar.advanced": {
+         "debug": {
+             "visibility": "hidden"
+         },
+         "launch": {
+             "visibility": "hidden"
+         },
+         "build": {
+             "visibility": "hidden"
+         },
+         "buildTarget": {
+             "visibility": "hidden"
+         }
 }
+
+     
+}
+
