8 thread, only Launch btn

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,7 +38,7 @@
             	"inheritDefault": "hidden"
             },
             "launch": {
-                "visibility": "hidden"
+                "visibility": "visible"
             },
             "build": {
                 "visibility": "hidden"
